--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ts-mocha": "^10.0.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
@@ -18,6 +17,8 @@
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
+    "ethereum-interface-generator": "^1.2.1",
     "ethers": "^5.7.2",
     "hardhat": "^2.14.0",
     "hardhat-abi-exporter": "^2.10.1",
@@ -25,8 +26,8 @@
     "hardhat-deploy": "^0.11.29",
     "hardhat-gas-reporter": "^1.0.9",
     "hardhat-tracer": "^2.3.2",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typechain": "^8.2.0",
-    "dotenv": "^16.0.3"
+    "typechain": "^8.2.0"
   }
 }
