--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.9.0",
     "@openzeppelin/contracts-upgradeable": "^4.9.0",
+    "@openzeppelin/upgrades-core": "^1.32.5",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
-    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "ethereum-interface-generator": "^1.2.1",
     "ethers": "^5.7.2",
